# SolairusDeliverable

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS-TEMPLATE.md  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  test.yml
docs/: README.md  REPORT_STYLE_GUIDE.md  architecture.md  deployment.md
docs/archive/: ERGOMIND_API_ISSUE.md  GTA_INTEGRATION_STATUS.md  PROJECT_PLAN.md
mro_intelligence/: __init__.py  api.py  cli.py
mro_intelligence/ai/: __init__.py  fact_validator.py  generator.py  pii_sanitizer.py
mro_intelligence/clients/: __init__.py  ergomind_client.py  fred_client.py  gta_client.py
mro_intelligence/config/: __init__.py  clients.py  content_blocklist.py  grainger_profile.py  report_style.py
mro_intelligence/core/: __init__.py  orchestrator.py  processor.py  query_templates.py
mro_intelligence/core/document/: __init__.py  content.py  generator.py  sections.py  styles.py
mro_intelligence/core/processors/: __init__.py  base.py  ergomind.py  fred.py  gta.py  merger.py
mro_intelligence/utils/: __init__.py  cache.py  config.py  retry.py
mro_intelligence/web/: __init__.py  app.py
mro_intelligence/web/templates/: index.html
scripts/: deploy.sh  quality-check.sh
solairus_intelligence/: __init__.py  api.py  cli.py
solairus_intelligence/ai/: fact_validator.py  generator.py  pii_sanitizer.py
solairus_intelligence/clients/: ergomind_client.py  fred_client.py  gta_client.py
solairus_intelligence/config/: __init__.py  clients.py  report_style.py
solairus_intelligence/core/: document_generator.py  orchestrator.py  processor.py
solairus_intelligence/core/document/: __init__.py  content.py  generator.py  sections.py  styles.py
solairus_intelligence/core/processors/: __init__.py  base.py  ergomind.py  fred.py  gta.py  merger.py
solairus_intelligence/utils/: cache.py  config.py  retry.py
solairus_intelligence/web/: app.py
solairus_intelligence/web/templates/: index.html
tests/: __init__.py  conftest.py  test_content_isolation.py  test_grainger_alignment.py  test_mro_queries.py  test_system.py
tests/benchmarks/: __init__.py  test_performance.py
tests/e2e/: __init__.py  test_full_pipeline.py
tests/integration/: __init__.py  test_processor_integration.py  test_web_integration.py
tests/unit/: __init__.py  test_additional_coverage.py  test_ai_generator.py  test_ai_modules.py  test_api.py  test_cache.py  test_cli.py  test_config_clients.py  test_document.py  test_document_content.py  test_document_generator.py  test_document_styles.py  test_ergomind_client.py  test_fred_client.py  test_gta_client.py  test_orchestrator.py  test_pii_sanitizer.py  test_processor.py  test_processors_fred.py  test_retry.py  test_utils_config.py  test_web_app.py
